--- a/Predicting_Titanic_Survivors_Using_Machine_Learning_.ipynb
+++ b/Predicting_Titanic_Survivors_Using_Machine_Learning_.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "p1SvRCIEofZJ",
         "39cVX_AeqEgu",
         "ifz1XShbIhvS",
         "NaYkds0PIsMa"
@@ -62,7 +61,8 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import scipy\n",
-        "import warnings\n"
+        "import warnings\n",
+        "import xgboost\n"
       ]
     },
     {
@@ -11142,32 +11142,6 @@
       "metadata": {
         "id": "1pBDyzX4r7gB"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install xgboost"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3WMCIs06sCET",
-        "outputId": "05d74318-0292-49ec-80e5-9cbbafee411a"
-      },
-      "execution_count": 125,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: xgboost in /usr/local/lib/python3.11/dist-packages (2.1.4)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from xgboost) (2.0.2)\n",
-            "Requirement already satisfied: nvidia-nccl-cu12 in /usr/local/lib/python3.11/dist-packages (from xgboost) (2.21.5)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from xgboost) (1.15.3)\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
